# rosatom_label_scanner

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
api/: Dockerfile  main.py  pyproject.toml
api/routes/: predict.py
api/scripts/: inference.py  utils.py
tg_bot/: Dockerfile  main.py  pyproject.toml
tg_bot/handlers/: handlers.py
