[tool.poetry]
name = "rosatom-label-scanner-api"
version = "0.1.0"
description = ""
authors = ["Роман Лазовский <r.v.lazovskiy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
pandas = "^2.2.3"
torch = "^2.5.1"
torchvision = "^0.20.1"
transformers = "^4.46.2"
ultralytics = "^8.3.28"
easyocr = "^1.7.2"
textdistance = "^4.6.3"
uvicorn = "^0.32.0"
openpyxl = "^3.1.5"
python-multipart = "^0.0.17"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
